# kpkg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml  clang_tidy.yml  codeql.yml  coverage.yml  release.yml  sanitizer.yml  temp.yml  valgrind.yml
blob/: 0001-Reduce-compile-time.patch  0001-fix-OPENSSL_VERSION_TEXT.patch  0001-fix-link-error.patch  0001-remove-HAVE_SYMVER_ALIAS_SUPPORT.patch  libmagic.patch  library.json  libssl.pc  openssl.pc
cmake/: AddCXXCompilerFlag.cmake  AddCXXFlag.cmake  CMakeUninstall.cmake.in  Check.cmake  ClangTidy.cmake  CompilerOptions.cmake  Coverage.cmake  Format.cmake  Install.cmake  Options.cmake  Valgrind.cmake  Version.cmake
include/: command.h  decompress.h  download.h  downloader.h  error.h  github_info.h  http.h  library.h  library_info.h  log.h  option.h  port.h  program.h  update.h  upgrade.h  version.h
port/: port.json
script/: build-install.sh  build.sh  install.sh  libunistring.pc
src/: blob.s  command.cpp  decompress.cpp  download.cpp  downloader.cpp  github_info.cpp  http.cpp  library.cpp  library.s  library_info.cpp  log.cpp  option.cpp  port.s  program.cpp  update.cpp  upgrade.cpp  version.cpp
temp/: kpkg-0.1.0-Linux.deb  kpkg-0.1.2-Linux.deb  kpkg-0.1.5-Linux.deb  kpkg-0.2.0-Linux.deb
test/: CMakeLists.txt  build.sh
test/benchmark/: CMakeLists.txt  main.cpp
test/boost/: CMakeLists.txt  json.cpp
test/boost/algorithm/: CMakeLists.txt  main.cpp
test/boost/asio/: CMakeLists.txt  main.cpp
test/boost/json/: CMakeLists.txt
test/boost/pool/: CMakeLists.txt  main.cpp
test/boost/program_options/: CMakeLists.txt
test/catch2/: CMakeLists.txt
test/curl/: CMakeLists.txt  main.cpp
test/extra_test/: CMakeLists.txt  common.cmake  error.h
test/extra_test/argon2/: CMakeLists.txt  main.cpp
test/extra_test/aria2/: CMakeLists.txt  main.cpp
test/extra_test/backward-cpp/: CMakeLists.txt  main.cpp
test/extra_test/boost/: CMakeLists.txt
test/extra_test/boost/asio/: CMakeLists.txt
test/extra_test/boost/core/: CMakeLists.txt  main.cpp
test/extra_test/boost/json/: CMakeLists.txt
test/extra_test/boost/pool/: CMakeLists.txt
test/extra_test/boost/program_options/: CMakeLists.txt
test/extra_test/boost/string_algo/: CMakeLists.txt
test/extra_test/boost/uuid/: CMakeLists.txt  main.cpp
test/extra_test/boringssl/: CMakeLists.txt  main.cpp
test/extra_test/catch2/: CMakeLists.txt  main.cpp
test/extra_test/cli11/: CMakeLists.txt  main.cpp
test/extra_test/cmark/: CMakeLists.txt  main.cpp
test/extra_test/cpp-httplib/: CMakeLists.txt  main.cpp
test/extra_test/curl/: CMakeLists.txt
test/extra_test/dbg_macro/: CMakeLists.txt  main.cpp
test/extra_test/embed_python/: CMakeLists.txt  main.cpp
test/extra_test/fmt/: CMakeLists.txt  main.cpp
test/extra_test/gsl/: CMakeLists.txt  main.cpp
test/extra_test/gsl_lite/: CMakeLists.txt  main.cpp
test/extra_test/highway/: CMakeLists.txt  main.cpp
test/extra_test/icu/: CMakeLists.txt  data.txt  transforms.cpp  unicode_string.cpp
test/extra_test/indicators/: CMakeLists.txt  main.cpp
test/extra_test/libarchive/: CMakeLists.txt  main.cpp
test/extra_test/libmagic/: CMakeLists.txt  main.cpp
test/extra_test/libqrencode/: CMakeLists.txt  main.cpp
test/extra_test/libvips/: CMakeLists.txt  main.cpp
test/extra_test/libwebp/: CMakeLists.txt  main.cpp
test/extra_test/llhttp/: CMakeLists.txt  main.cpp
test/extra_test/magic_enum/: CMakeLists.txt
test/extra_test/mimalloc/: CMakeLists.txt  main.cpp
test/extra_test/nameof/: CMakeLists.txt  main.cpp
test/extra_test/onetbb/: CMakeLists.txt  main.cpp
test/extra_test/opencc/: CMakeLists.txt  main.cpp
test/extra_test/openssl/: CMakeLists.txt
test/extra_test/parallel-hashmap/: CMakeLists.txt  main.cpp
test/extra_test/pugixml/: CMakeLists.txt  data.xml
test/extra_test/re2/: CMakeLists.txt  main.cpp
test/extra_test/rocksdb/: CMakeLists.txt
test/extra_test/scope_guard/: CMakeLists.txt  main.cpp
test/extra_test/semver/: CMakeLists.txt  main.cpp
test/extra_test/simdjson/: CMakeLists.txt  main.cpp
test/extra_test/simdutf/: CMakeLists.txt  main.cpp
test/extra_test/spdlog/: CMakeLists.txt
test/extra_test/sqlcipher/: CMakeLists.txt  main.cpp
test/extra_test/sqlite/: CMakeLists.txt  main.cpp
test/extra_test/tidy_html5/: CMakeLists.txt
test/extra_test/utfcpp/: CMakeLists.txt  main.cpp
test/extra_test/woff2/: CMakeLists.txt  main.cpp
test/extra_test/xxhash/: CMakeLists.txt  main.cpp
test/extra_test/zstd/: CMakeLists.txt  main.cpp
test/fmt/: CMakeLists.txt
test/icu/: CMakeLists.txt  conv.cpp  main.cpp
test/libarchive/: CMakeLists.txt  main.cpp
test/magic_enum/: CMakeLists.txt
test/openssl/: CMakeLists.txt
test/protobuf/: CMakeLists.txt  main.cpp
test/rocksdb/: CMakeLists.txt  main.cpp
test/spdlog/: CMakeLists.txt  main.cpp
test/sqlite/: CMakeLists.txt  main.cpp
test/tbb/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  command.cpp  command_test.cpp  decompress.cpp  download.cpp  library.cpp  library_test.cpp  main.cpp  option.cpp  program.cpp  program_test.cpp  sha.cpp  version_test.cpp
test/unit_test2/: CMakeLists.txt  program.cpp  sha.cpp  sha.h
test/zlib/: CMakeLists.txt  main.cpp
test/zstd/: CMakeLists.txt
tool/: CMakeLists.txt  main.cpp
