add_subdirectory(libarchive)
add_subdirectory(zstd)
add_subdirectory(curl)
add_subdirectory(rocksdb)
add_subdirectory(fmt)
add_subdirectory(spdlog)
add_subdirectory(catch2)
add_subdirectory(benchmark)
add_subdirectory(openssl)
add_subdirectory(sqlite)
add_subdirectory(protobuf)
add_subdirectory(magic_enum)
add_subdirectory(boost)
add_subdirectory(zlib)
add_subdirectory(icu)
